--- a/Event.html
+++ b/Event.html
@@ -49,9 +49,9 @@
 
 <div class="leftcol">
 
-<h2>leftcol</h2>
+<h2>leftcol_event 1</h2>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam alias eius reiciendis numquam sunt vel! Molestiae aspernatur nulla iste perferendis alias labore distinctio repellat! Quas modi qui officiis quibusdam. Iste.</p>
+<img src="/MS801/img/WhatsApp Image 2023-03-04 at 10.32.57.jpeg"
 
 <p>Modi maiores vitae repudiandae nostrum. Excepturi laudantium, maiores, dolor a quas qui, error culpa officia sed et id? Adipisci voluptatum minus repudiandae mollitia tempore consectetur, ad eveniet aliquid deleniti quaerat.</p>
 
@@ -60,9 +60,9 @@
 
 <div class="rightcol">
 
-<h2>rightcol</h2>
+<h2>rightcol_event2</h2>
 
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur obcaecati ratione rem minima! Hic corrupti dolorum natus consequatur facilis fuga, recusandae quas fugit illum, culpa eaque nemo, beatae non adipisci.</p>
+<img src="/MS801/img/WhatsApp Image 2023-03-04 at 10.32.57 (1).jpeg"
 
 <p>Minus corporis facilis deleniti fugit nesciunt nisi neque, consectetur, recusandae voluptatem, dicta doloribus debitis. Reiciendis repellendus sequi quasi velit unde! Rerum nemo harum voluptas quasi consequuntur corrupti incidunt. Qui, explicabo!</p>
 
